nginx/nginx-svc-endpoint.yaml
apiVersion: v1
kind: Endpoints
metadata:
  name: nginx-svc
subsets:
  - addresses:
    - ip: 172.19.169.151
    - ip: 172.19.169.150
    ports:
    - name: http
      port: 80
